[project]
name = "atopile-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["supabase>=2.15.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atopile_auth"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = ["typer>=0.15.2", "fastapi[standard]>=0.115.12", "httpx>=0.28.1"]

client = ["platformdirs>=4.3.7"]

server = ["fastapi>=0.115.12"]
